--- a/src/Homework.Exercise.Application/Homework.Exercise.Application.csproj
+++ b/src/Homework.Exercise.Application/Homework.Exercise.Application.csproj
@@ -1,15 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Homework.Exercise.Application\Homework.Exercise.Application.csproj" />
+      <ProjectReference Include="..\Homework.Exercise.Domain\Homework.Exercise.Domain.csproj" />
     </ItemGroup>
 
 </Project>
