--- a/src/Homework.Exercise.Domain/Homework.Exercise.Domain.csproj
+++ b/src/Homework.Exercise.Domain/Homework.Exercise.Domain.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentResults" Version="3.16.0" />
+      <PackageReference Include="System.Reactive" Version="6.0.1" />
+    </ItemGroup>
+
 </Project>
