--- a/src/Homework.Exercise.Presentation/Homework.Exercise.Presentation.csproj
+++ b/src/Homework.Exercise.Presentation/Homework.Exercise.Presentation.csproj
@@ -10,6 +10,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Homework.Exercise.Application\Homework.Exercise.Application.csproj" />
+      <ProjectReference Include="..\Homework.Exercise.Infrastructure\Homework.Exercise.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     </ItemGroup>
 
 </Project>
