--- a/src/Homework.Exercise.Application/Homework.Exercise.Application.csproj
+++ b/src/Homework.Exercise.Application/Homework.Exercise.Application.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     </ItemGroup>
 
 </Project>
