--- a/src/Homework.Exercise.Application/Homework.Exercise.Application.csproj
+++ b/src/Homework.Exercise.Application/Homework.Exercise.Application.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
+      <PackageReference Include="MimeKit" Version="4.12.0" />
     </ItemGroup>
 
 </Project>
