Fixed bugs regarding folder structure and XML parsing.

--- a/src/Homework.Exercise.Presentation/Homework.Exercise.Presentation.csproj
+++ b/src/Homework.Exercise.Presentation/Homework.Exercise.Presentation.csproj
@@ -21,4 +21,10 @@
       <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    
 </Project>
